--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   padding: 0;
   font-family: "Montserrat", sans-serif;
   background: linear-gradient(rgba(1, 1, 1, 0.9), rgba(1, 1, 1, 0.9)),
-    url("../Images/code.jpg");
+    url("Images/1f87b29a2df46100a75aa86b170a21cb.jpg");
   background-color: #000000; /* Used if the image is unavailable */
   background-position: center; /* Center the image */
   background-attachment: fixed;
