--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   padding: 0;
   font-family: "Montserrat", sans-serif;
   background: linear-gradient(rgba(1, 1, 1, 0.9), rgba(1, 1, 1, 0.9)),
-    url("Images/code.jpg");
+    url("https://github.com/kapirath28/portfoliowannabe2/blob/main/Images/code.jpg");
   background-color: #000000; /* Used if the image is unavailable */
   background-position: center; /* Center the image */
   background-attachment: fixed;
